--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 
 dependencies:
   grpc: ^2.8.0
+  protobuf: ^1.1.0
+  protoc_plugin: ^19.2.0+1
 
 dev_dependencies:
   pedantic: ^1.9.0
