--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,4 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Hello!"
+      - run: ls
+      - run: doker build -t dart ./
       - run: mkdir hell
