--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: dart-cpu-temp
 on: [push]
 jobs:
   first-job:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - run: echo "Hello!"
       - run: ls
