--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name:
-        run: docker ps
-      #- name: Hello world action step
-      #  uses: ./ # Uses an action in the root directory
-      #  id: dart-cpu-temp
-      - name: Get the output time
-        run: echo "The time was"
+        run: docker build -t dart ./
+      - name:
+        run: docker run -d -p 50051:50051 dart
