--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,4 +9,4 @@ jobs:
       - name:
         run: docker build -t dart ./
       - name:
-        run: docker stop dart && docker run --name=dart -d -p 50051:50051 dart
+        run: docker stop dart && docker rm dart && docker run --name=dart -d -p 50051:50051 dart
